src/main/java/com/inacioferrarini/template/portal/sample/core/api/errors/exceptions/UnexpectedValueException.java
package com.inacioferrarini.template.portal.sample.core.api.errors.exceptions;

public class UnexpectedValueException extends RuntimeException {

	private static final long serialVersionUID = 1L;

}
